Ver2.1.0-Beta1: Rewrite DashBoard.

--- a/LoCyanFrpDesktop/Dashboard/ProxyList.xaml
+++ b/LoCyanFrpDesktop/Dashboard/ProxyList.xaml
@@ -8,7 +8,23 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ProxyList">
-
+    <Page.Resources>
+        <Style x:Key="RoundedContextMenuStyle" TargetType="ContextMenu">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="ContextMenu">
+                        <Border Name="ContextMenuBorder" 
+                                Background="{TemplateBinding Background}"
+                                BorderBrush="{TemplateBinding BorderBrush}"
+                                BorderThickness="{TemplateBinding BorderThickness}"
+                                CornerRadius="5">
+                            <StackPanel IsItemsHost="True"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Page.Resources>
     <Grid Margin="0,0,20,0">
         <Grid.Resources>
             <SolidColorBrush x:Key="BorderColor"/>
@@ -31,22 +47,19 @@
                 Grid.Column="1"
                 Margin="0"
                 Padding="10,5"
-                Background="{DynamicResource ControlFillColorDefaultBrush}"
-                CornerRadius="8">
-                
+                CornerRadius="8"
+                >
+                    <StackPanel >
+                        <DockPanel Name="ListPanel">
+                            
+                        </DockPanel>
+                    </StackPanel>
+                <!--
                 <ListView SelectionChanged="Proxies_List_SelectionChanged" Name="proxies_list"  HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="10" ContextMenuOpening="ListView_ContextMenuOpening" MouseDown="ListView_MouseDown" MouseDoubleClick="proxies_list_MouseDoubleClick">
                     <ListView.ContextMenu>
-                        <ContextMenu Name="ListMenu">
-                            <ui:MenuItem Header="刷新" Click="Refresh_Click"/>
-                            <Separator/>
-                            <ui:MenuItem Header="新建隧道" Click="CreateNewProxy_Click"/>
-                            <ui:MenuItem Header="删除隧道" Click="DeleteProxy_Click"/>
-                            <Separator/>
-                            <ui:MenuItem Header="启动隧道" Click="StartProxy_Click"/>
-                            <ui:MenuItem Header="停止隧道" Click="StopProxy_Click"/>
-                        </ContextMenu>
+                        
                     </ListView.ContextMenu>
-                </ListView>
+                </ListView>-->
                 </Border>
             </Grid>
             <Grid Grid.Row="1">
@@ -54,10 +67,12 @@
                     <ColumnDefinition Width="auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <ui:Card Grid.Column="0" Padding="10">
+                <ui:Card Grid.Column="0" Padding="10" Margin="10,0,0,0" MouseDown="Card_MouseDown" >
+                    
                     <StackPanel>
                         <DockPanel>
                             <TextBlock Name="title_username" Text="欢迎回来，"/>
+                            
                         </DockPanel>
                     </StackPanel>
                     
