Ver 2.1.0-Beta1.2: Add Startup Banner.

--- a/LoCyanFrpDesktop/MainWindow.xaml
+++ b/LoCyanFrpDesktop/MainWindow.xaml
@@ -124,7 +124,9 @@
                         </Grid>
                     </Border>
                 </Grid>
-
+                <TextBlock Name="Tips" Text="你瞅啥" HorizontalAlignment="Center" VerticalAlignment="Bottom" Foreground="Gray" FontSize="9">
+                        
+                </TextBlock>
             </Grid>
         </Grid>
         
