Ver 2.1.0-RC4: Now can use "Enter" to login.

--- a/LoCyanFrpDesktop/MainWindow.xaml
+++ b/LoCyanFrpDesktop/MainWindow.xaml
@@ -19,7 +19,8 @@
         ExtendsContentIntoTitleBar="True"
         StateChanged="UiWindow_StateChanged"
         Style="{StaticResource UiWindow}"
-        WindowStyle="None">
+        WindowStyle="None"
+        KeyDown="UiWindow_KeyDown">
     <Grid>
         <Grid.Resources>
             <Color x:Key="ShadowColor"></Color>
