--- a/LoCyanFrpDesktop/Dashboard/Settings.xaml
+++ b/LoCyanFrpDesktop/Dashboard/Settings.xaml
@@ -48,7 +48,16 @@
                                 Content="选择文件"
                                 Icon="OpenFolder24"/>
                         </Grid>
+                        <DockPanel  HorizontalAlignment="Left" Width="100" >
+                            <TextBlock DockPanel.Dock="Top" Text="主题设置" FontSize="12"/>
+                            <ComboBox Name="AppliedTheme" DockPanel.Dock="Bottom" SelectionChanged="AppliedTheme_SelectionChanged">
+                                <ComboBoxItem Content="跟随系统"></ComboBoxItem>
+                                <ComboBoxItem Content="深色"/>
+                                <ComboBoxItem Content="浅色"/>
+                            </ComboBox>
+                        </DockPanel>
                         <ui:Button Name="SignOut" Margin="0,10" Icon="ArrowExit20" Content="退出登录" Click="SignOut_Click"/>
+                        
                     </StackPanel>
                     
                 </Grid>
