--- a/LoCyanFrpDesktop/Dashboard/Settings.xaml
+++ b/LoCyanFrpDesktop/Dashboard/Settings.xaml
@@ -30,7 +30,7 @@
                                 <Setter Property="Margin" Value="0,15,0,5" />
                             </Style>
                         </StackPanel.Resources>
-                        <TextBlock Text="Frpc路径"/>
+                        <TextBlock Text="Frpc路径" FontSize="12"/>
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
@@ -49,19 +49,29 @@
                                 Icon="OpenFolder24"/>
                         </Grid>
                         <DockPanel  HorizontalAlignment="Left" Width="110" >
-                            <TextBlock DockPanel.Dock="Top" Text="主题设置" FontSize="12"/>
-                            <ComboBox Name="AppliedTheme" DockPanel.Dock="Bottom" Padding="10,8">
-                                <ComboBoxItem Content="跟随系统"/>
-                                <ComboBoxItem Content="深色"/>
-                                <ComboBoxItem Content="浅色"/>
-                            </ComboBox>
+                            <TextBlock DockPanel.Dock="Top" Text="奇奇妙妙功能区" FontSize="12"/>
                         </DockPanel>
-                        <ui:Card HorizontalAlignment="Left" Width="150" Margin="0,10">
-                            <StackPanel>
-                                <ui:Button Name="CopyToken" Width="110" Margin="0,10" Icon="Copy24" Content="复制Token" Click="CopyToken_Click"/>
-                                <ui:Button Name="SignOut" Width="110" Margin="0,10" Icon="ArrowExit20" Content="退出登录" Click="SignOut_Click"/>
-                            </StackPanel>
-                        </ui:Card>
+                        <StackPanel Orientation="Horizontal">
+                            <ui:Card Margin="0,10,10,10">
+                                <StackPanel>
+                                    <ui:ToggleSwitch Name="FollowSystemThemeSetting" Content="跟随系统主题设置" Margin="0,10" Click="FollowSystemThemeSetting_Click" IsChecked="True"/>
+                                    <ui:ToggleSwitch Name="UseDarkTheme" Content="使用暗黑主题" Click="UseDarkTheme_Click" IsChecked="False"/>
+                                    <ui:ToggleSwitch Name="AutoStartUp" Content="开机自动启动" Click="AutoStartUp_Click" Margin="0,10" />
+                                </StackPanel>
+                            </ui:Card>
+                            <ui:Card HorizontalAlignment="Left" Width="150" Margin="0,10">
+                                <StackPanel>
+                                    <ui:Button Name="CopyToken" Width="110" Margin="0,10" Icon="Copy24" Content="复制Token" Click="CopyToken_Click"/>
+                                    <ui:Button Name="SignOut" Width="110" Margin="0,10" Icon="ArrowExit20" Content="退出登录" Click="SignOut_Click"/>
+                                </StackPanel>
+                            </ui:Card>
+                            <ui:Card VerticalAlignment="Stretch" Margin="0,10">
+                                <StackPanel HorizontalAlignment="Center">
+                                    <ui:Button Name="EasterEgg" MinHeight="50" Icon="Warning24" Content="不要点击这个按钮哦" Click="EasterEgg_Click"/>
+                                    <TextBlock HorizontalAlignment="Center" Text="会有意想不到的后果"/>
+                                </StackPanel>
+                            </ui:Card>
+                        </StackPanel>
                     </StackPanel>
                     
                 </Grid>
